k8s-deployment/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: page-kishalay-service
spec:
  type: ClusterIP
  selector:
    app: page-kishalay
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 80
