k8s-deployment/ingress/ingress2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-ingress2
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: kishalay.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: page-kishalay-service
            port:
              number: 80
